<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.settings.SettingsView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mSettingsPosts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimension35"
            android:text="@string/posts" />

        <TextView
            android:id="@+id/mSettingsLiked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimension35"
            android:text="@string/likedposts" />

        <TextView
            android:id="@+id/mSettingsFavourites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimension35"
            android:text="@string/favourite" />

        <TextView
            android:id="@+id/mSettingsUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimension35"
            android:text="@string/total_users" />

        <Button
            android:id="@+id/mLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/redbutton"
            android:textColor="@color/colorWhite"
            android:text="@string/logout" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>